--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.page-wrapper {
+  display: flex;
+  justify-content: center;
+  /* grid-template-columns: repeat(2, 1fr); */
+}
+
+
+
