--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -4,10 +4,15 @@ body {
 
 .constructor {
     overflow-y: scroll;  
-    height:55vh;
+    height:36vh;
 }
 
-.column-1 {
+.item {
+    display: flex;
+    flex-direction: row; 
+}
+
+.column {
     width: 582px;
     display: inline-block;
     gap: 10px;
@@ -18,7 +23,7 @@ body {
     align-items: center;
 }
 
-.total-price {
+.total {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -27,7 +32,7 @@ body {
     gap: 5px;
 }
 
-.check-out-wrapper {
+.checkout {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -38,21 +43,21 @@ body {
     width: 8px;
 }
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    border-radius: 3px;
-    border: 1px ;
-    background: #2F2F37;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 3px;
+  border: 1px ;
+  background: #2F2F37;
+}
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #8585AD; 
-    border-radius: 10px;
-    border: 3px;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8585AD; 
+  border-radius: 10px;
+  border: 3px;
+}
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #8585AD; 
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #8585AD; 
+}
