Added API handling and Modal, ModalOverlay and OrderDetails components

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -38,6 +38,12 @@ body {
     align-items: center;
 }
 
+.order{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
