--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -44,6 +44,10 @@ body {
     align-items: center;
 }
 
+.buttonWrapper {
+    overflow: 'hidden'
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
