--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -34,6 +34,10 @@ h1 {
     height: 208px;
 }
 
+.cardWrapper {
+    overflow: 'hidden';
+}
+
 .icon {
     display: flex;
     align-items: center;
