--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -12,6 +12,13 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 .closeIcon {
@@ -19,4 +26,4 @@
     top: 60px; 
     right: 40px; 
     cursor: pointer; 
-  }
+}
