--- a/src/components/order-feed-details/ingredients-list/ingredient/ingredient.module.css
+++ b/src/components/order-feed-details/ingredients-list/ingredient/ingredient.module.css
@@ -1,3 +1,10 @@
+.ingredient {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
+
 .image {
     width: 64px;
     height: 64px;
